Utils/yaml/microfrontends/app-container/dp-microfrontend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dp-microfrontend-angular-container
  namespace: microservices
  labels:
    app: microservices
    app.kubernetes.io/part-of: microservices
    app.openshift.io/runtime: angularjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservices
  template:
    metadata:
      labels:
        app: microservices
    spec:
      containers:
        - name: microfrontend-angular-container
          image: image-registry.openshift-image-registry.svc:5000/microservices/is-microfrontend-angular-container:latest
          ports:
            - name: microfrontend-angular-container-port
              containerPort: 2000
              protocol: TCP
          resources:
            limits:
              ephemeral-storage: 8Gi
            requests:
              ephemeral-storage: 4Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
