Utils/yaml/microfrontends/app-container/route-microfrontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-microfrontend-angular-container
  namespace: microservices
  labels:
    app: microservices
    app.kubernetes.io/part-of: microservices
spec:
  host: microfrontend-angular-container.apps-crc.testing
  to:
    kind: Service
    name: svc-microservices
  port:
    targetPort: microfrontend-angular-container-tcp
  tls:
    termination: edge
    wildcardPolicy: None
